classDiagram
    class Task {
        +String description
        +float duration
        +int priority
        +String due_time
        +String frequency
        +bool completed
        +toggle_complete()
    }

    class Pet {
        +String name
        +String animal_type
        +List~Task~ tasks
        +add_task(task: Task)
        +remove_task(task: Task)
        +list_tasks() List~Task~
    }

    class Owner {
        +String name
        +int time_available
        +List~Pet~ pets
        +add_pet(pet: Pet)
        +remove_pet(pet: Pet)
        +get_all_tasks() List~Task~
    }

    class Scheduler {
        +Owner owner
        +sort_by_time(tasks: List~Task~) List~Task~
        +filter_by_pet(pet_name: String) List~Task~
        +filter_by_status(completed: bool) List~Task~
        +generate_plan() List~Task~
        +detect_conflicts() List~String~
        +explain_plan(plan: List~Task~) String
    }

    Owner "one" --> "many" Pet : has
    Pet "one" --> "many" Task : has
    Scheduler --> Owner : retrieves tasks from
